--- a/based_nextjs_nestjs/client/app/globals.css
+++ b/based_nextjs_nestjs/client/app/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  input {
+    @apply border-none outline-none;
+  }
+}
